# xyncer

./: README.md
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml
client/: Cargo.toml
client/src/: client.rs  connection.rs  main.rs  session.rs  ui.rs
server/: Cargo.toml
server/src/: connection.rs  main.rs  server.rs  session.rs
xyncer_share/: Cargo.toml
xyncer_share/src/: lib.rs  payloads.rs
