[package]
name = "xyncer_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytes = "1.6.0"
fastwebsockets = { version = "0.7.1", features = ["upgrade"] }
http-body-util = "0.1.1"
hyper = "1.2.0"
hyper-util = { version = "0.1.3", features = ["tokio"] }
tokio = "1.37.0"
