[package]
name = "xyncer_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
eframe = "0.27.2"
fastwebsockets = { version = "0.7.1", features = ["upgrade"] }
flume = "0.11.0"
http-body-util = "0.1.1"
hyper = "1.2.0"
hyper-util = { version = "0.1.3", features = ["tokio"] }
log = "0.4.21"
rmp-serde = "1.1.2"
simple_logger = "5.0.0"
tokio = { version = "1.37.0", features = ["full"] }

xyncer_share = { path = "../xyncer_share" }
