[package]
name = "xyncer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
fastwebsockets = { version = "0.8.0", features = ["upgrade", "with_axum"] }
log = "0.4.21"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = "1.0.197"
simple_logger = "5.0.0"
tokio = { version = "1.37.0", features = ["full"] }

xyncer_share = { path = "../xyncer_share" }
