[package]
name = "xyncer_share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastwebsockets = { version = "0.7.1", features = ["upgrade"] }
hyper = "1.2.0"
hyper-util = { version = "0.1.3", features = ["tokio"] }
log = "0.4.21"
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["serde_derive"] }
